[package]
name = "diver"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dependencies.env_logger]
default-features = false
version = "0.7.1"

[dependencies.config]
version = "0.10.1"
default-features = false
features = ["yaml"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
